(lang dune 3.2)
(name saturn)
(generate_opam_files true)
(implicit_transitive_deps false)
(source (github ocaml-multicore/saturn))
(license ISC)
(authors "KC Sivaramakrishnan")
(maintainers "Carine Morel" "KC Sivaramakrishnan" "Sudha Parimala")
(documentation "https://ocaml-multicore.github.io/saturn/")
(package
 (name saturn)
 (synopsis "Collection of parallelism-safe data structures for Multicore OCaml")
 (depends
  (ocaml (>= 4.12))
  (domain_shims (and (>= 0.1.0) :with-test))
  (saturn_lockfree (= :version))
  (alcotest (and (>= 1.7.0) :with-test))
  (qcheck (and (>= 0.21.3) :with-test))
  (qcheck-stm (and (>= 0.3) :with-test))
  (qcheck-alcotest (and (>= 0.21.3) :with-test))
  (yojson (and (>= 2.0.2) :with-test))
  (dscheck (and (>= 0.2.0) :with-test))))
(package
 (name saturn_lockfree)
 (synopsis "Collection of lock-free data structures for Multicore OCaml")
 (depends
  (ocaml (>= 4.12))
  (domain_shims (and (>= 0.1.0) :with-test))
  (backoff (>= 0.1.0))
  (alcotest (and (>= 1.7.0) :with-test))
  (qcheck (and (>= 0.21.3) :with-test))
  (qcheck-core (and (>= 0.21.3) :with-test))
  (qcheck-stm (and (>= 0.3) :with-test))
  (qcheck-multicoretests-util (and (>= 0.3) :with-test))
  (qcheck-alcotest (and (>= 0.21.3) :with-test))
  (yojson (and (>= 2.0.2) :with-test))
  (dscheck (and (>= 0.2.0) :with-test))))
