opam-version: "2.0"
maintainer: "KC Sivaramakrishnan <sk826@cl.cam.ac.uk>"
authors: ["KC Sivaramakrishnan <sk826@cl.cam.ac.uk>"]
homepage: "https://github.com/ocaml-multicore/lockfree"
doc: "https://ocaml-multicore.github.io/lockfree"
synopsis: "Lock-free data structures for multicore OCaml"
license: "ISC"
dev-repo: "git+https://github.com/ocaml-multicore/lockfree.git"
bug-reports: "https://github.com/ocaml-multicore/lockfree/issues"
tags: []
depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "3.0"}
  "qcheck" {with-test & >= "0.18.1"}
  "qcheck-alcotest" {with-test & >= "0.18.1"}
  "yojson" {>= "2.0.2"}
]
depopts: []
build: ["dune" "build" "-p" name "-j" jobs]
