opam-version: "2.0"
maintainer: "KC Sivaramakrishnan <sk826@cl.cam.ac.uk>"
authors: ["KC Sivaramakrishnan <sk826@cl.cam.ac.uk>"]
homepage: "https://github.com/ocaml-multicore/lockfree"
doc: "https://ocaml-multicore.github.io/lockfree"
synopsis: "Lock-free data structures for multicore OCaml"
license: "ISC"
dev-repo: "git+https://github.com/ocaml-multicore/lockfree.git"
bug-reports: "https://github.com/ocaml-multicore/lockfree/issues"
tags: []
depends: [
  "ocaml" {>= "4.12"}
  "dune" {>= "3.0"}
  "domain_shims" {>= "0.1.0"}
  "qcheck" {with-test & >= "0.18.1"}
  "qcheck-stm" {with-test & >= "0.1.1"}
  "qcheck-alcotest" {with-test & >= "0.18.1"}
  "alcotest" {with-test & >= "1.6.0"}
  "yojson" {>= "2.0.2"}
  "dscheck" {with-test & >= "0.1.0"}
]
available: arch != "x86_32" & arch != "arm32" & arch != "ppc64"
depopts: []
build: ["dune" "build" "-p" name "-j" jobs]
pin-depends: [
  [ "qcheck-stm.0.1.1"
    "git+https://github.com/ocaml-multicore/multicoretests.git#4e2e1b22bffec3675a15cf6c2e05f733e9f8b66d" ] ]
