(* -*- tuareg -*- *)

let maybe_domain_shims =
  if Jbuild_plugin.V1.ocaml_version < "5" then "domain_shims" else ""

let () =
  Jbuild_plugin.V1.send
  @@ {|

(rule
 (action
  (copy ../src/htbl/htbl_intf.mli htbl_intf.ml))
 (package saturn))

(rule
 (action
  (copy ../src/michael_scott_queue/michael_scott_queue_intf.ml michael_scott_queue_intf.ml))
 (package saturn))

(rule
 (action
  (copy ../src/spsc_queue/spsc_queue_intf.mli spsc_queue_intf.ml))
 (package saturn))

(rule
 (action
  (copy ../src/bounded_queue/bounded_queue_intf.mli bounded_queue_intf.ml))
 (package saturn))

(test
 (package saturn)
 (name main)
 (action
  (run %{test} -brief))
 (libraries saturn multicore-bench multicore-magic |}
  ^ maybe_domain_shims ^ {| ))
|}
