(test
 (name test_ws_deque)
 (libraries lockfree)
 (modules test_ws_deque))

(test
 (name qcheck_ws_deque)
 (libraries lockfree qcheck qcheck-alcotest)
 (modules qcheck_ws_deque))

(test
 (name qcheck_mpsc_queue)
 (libraries lockfree qcheck qcheck-alcotest)
 (modules qcheck_mpsc_queue))

(test
 (name test_mpmc_queue)
 (libraries lockfree)
 (modules test_mpmc_queue))