(test
 (name test_ws_deque)
 (libraries lockfree)
 (modules test_ws_deque))

(test
 (name test_spsc_queue)
 (libraries lockfree)
 (modules test_spsc_queue))

(test
 (name qcheck_spsc_queue)
 (libraries lockfree qcheck "qcheck-alcotest")
 (modules qcheck_spsc_queue))

(test
 (name qcheck_ws_deque)
 (libraries lockfree qcheck "qcheck-alcotest")
 (modules qcheck_ws_deque))

(test
 (name qcheck_mpsc_queue)
 (libraries lockfree qcheck qcheck-alcotest)
 (modules qcheck_mpsc_queue))

(test
 (name qcheck_michael_scott_queue)
 (libraries lockfree qcheck qcheck-alcotest)
 (modules qcheck_michael_scott_queue))

(test
 (name qcheck_treiber_stack)
 (libraries lockfree qcheck qcheck-alcotest)
 (modules qcheck_treiber_stack))

(test
 (name test_mpmc_relaxed_queue)
 (libraries lockfree unix alcotest)
 (modules test_mpmc_relaxed_queue))

(test
 (name test_paradict)
 (libraries lockfree alcotest)
 (modules test_paradict))
