(rule
 (action
  (with-stdout-to
   htbl.ml
   (progn
    (echo "# 1 \"htbl.head_safe.ml\"\n")
    (cat htbl.head_safe.ml)
    (echo "# 1 \"htbl.body.ml\"\n")
    (cat htbl.body.ml)))))

(rule
 (action
  (with-stdout-to
   htbl_unsafe.ml
   (progn
    (echo "# 1 \"htbl.head_unsafe.ml\"\n")
    (cat htbl.head_safe.ml)
    (echo "# 1 \"htbl.body.ml\"\n")
    (cat htbl.body.ml)))))

(mdx
 (package saturn)
 (enabled_if
  (and
   (<> %{os_type} Win32)
   (>= %{ocaml_version} 5.1.0)))
 (libraries saturn)
 (files htbl_intf.mli))
