(rule
 (action
  (copy ../../src_lockfree/bounded_stack.ml bounded_stack.ml))
 (package saturn_lockfree))

(test
 (package saturn_lockfree)
 (name bounded_stack_dscheck)
 (libraries atomic dscheck alcotest backoff multicore-magic)
 (build_if
  (and
   (>= %{ocaml_version} 5)
   (not
    (and
     (= %{arch_sixtyfour} false)
     (= %{architecture} arm)))))
 (modules bounded_stack bounded_stack_dscheck))

(test
 (package saturn_lockfree)
 (name stm_bounded_stack)
 (modules stm_bounded_stack)
 (libraries saturn_lockfree qcheck-core qcheck-stm.stm stm_run))
