(rule
 (action
  (progn
   (copy ../../src_lockfree/llist.ml llist.ml)
   (copy ../../src_lockfree/size.ml size.ml)))
 (package saturn_lockfree))

(test
 (package saturn_lockfree)
 (name llist_dscheck)
 (modules llist size llist_dscheck)
 (libraries atomic transparent_atomic dscheck alcotest multicore-magic))

;(test
; (package saturn_lockfree)
; (name qcheck_llist)
; (modules qcheck_llist)
; (libraries saturn qcheck qcheck-core qcheck-alcotest alcotest))

(test
 (package saturn_lockfree)
 (name stm_llist)
 (modules stm_llist)
 (libraries
  saturn
  qcheck-core
  qcheck-core.runner
  qcheck-stm.stm
  qcheck-stm.sequential
  qcheck-stm.domain)
 (action
  (run %{test} --verbose)))

(test
 (package saturn_lockfree)
 (name stm_hshtbl)
 (modules stm_hshtbl)
 (libraries
  saturn
  qcheck-core
  qcheck-core.runner
  qcheck-stm.stm
  qcheck-stm.sequential
  qcheck-stm.domain)
 (action
  (run %{test} --verbose)))
