(rule
 (action
  (copy ../../src/htbl/htbl.ml htbl.ml))
 (package saturn))

(rule
 (action
  (copy ../../src/htbl/htbl_unsafe.ml htbl_unsafe.ml))
 (package saturn))

(rule
 (action
  (copy ../../src/htbl/htbl_intf.mli htbl_intf.ml))
 (package saturn))

(rule
 (action
  (copy ../../src/size.ml size.ml))
 (package saturn))

(test
 (package saturn)
 (name dscheck_htbl)
 (libraries alcotest atomic backoff dscheck multicore-magic-dscheck)
 (build_if
  (and
   (>= %{ocaml_version} 5)
   (not
    (and
     (= %{arch_sixtyfour} false)
     (= %{architecture} arm)))))
 (modules htbl htbl_unsafe htbl_intf htbl_utils dscheck_htbl size)
 (flags
  (:standard -open Multicore_magic_dscheck)))

(test
 (package saturn)
 (name stm_htbl)
 (modules stm_htbl)
 (libraries htbls saturn qcheck-core qcheck-stm.stm stm_run)
 (enabled_if
  (= %{arch_sixtyfour} true)))
