(rule
 (copy ../../src_lockfree/backoff.ml backoff.ml))

(rule
 (copy ../../src_lockfree/michael_scott_queue.ml michael_scott_queue.ml))

(test
 (name michael_scott_queue_dscheck)
 (libraries atomic dscheck alcotest)
  (enabled_if (not (and (= %{arch_sixtyfour} false) (= %{architecture} arm))))
 (modules backoff michael_scott_queue michael_scott_queue_dscheck))

(test
 (name qcheck_michael_scott_queue)
 (libraries saturn qcheck qcheck-alcotest)
 (modules qcheck_michael_scott_queue))

(test
 (name stm_michael_scott_queue)
 (modules stm_michael_scott_queue)
 (libraries saturn qcheck-stm.sequential qcheck-stm.domain)
 (enabled_if (= %{arch_sixtyfour} true))
 (action
  (run %{test} --verbose)))
