(rule
 (action
  (copy ../../src_lockfree/michael_scott_queue.ml michael_scott_queue.ml))
 (package saturn_lockfree))

(test
 (package saturn_lockfree)
 (name michael_scott_queue_dscheck)
 (libraries atomic dscheck alcotest backoff)
 (enabled_if
  (not
   (and
    (= %{arch_sixtyfour} false)
    (= %{architecture} arm))))
 (modules michael_scott_queue michael_scott_queue_dscheck))

(test
 (package saturn_lockfree)
 (name qcheck_michael_scott_queue)
 (libraries saturn_lockfree barrier qcheck qcheck-alcotest)
 (modules qcheck_michael_scott_queue))

(test
 (package saturn_lockfree)
 (name stm_michael_scott_queue)
 (modules stm_michael_scott_queue)
 (libraries saturn_lockfree qcheck-stm.sequential qcheck-stm.domain)
 (enabled_if
  (= %{arch_sixtyfour} true))
 (action
  (run %{test} --verbose)))
