(library
 (package saturn_lockfree)
 (name linked_set)
 (modules linked_set))

(rule
 (action
  (copy ../../src_lockfree/size.ml size.ml))
 (package saturn_lockfree))

(test
 (package saturn_lockfree)
 (name dscheck_size)
 (modules dscheck_size size)
 (libraries
  atomic
  transparent_atomic
  linked_set
  dscheck
  alcotest
  multicore-magic))

(test
 (package saturn_lockfree)
 (name stm_size)
 (modules stm_size)
 (libraries
  saturn_lockfree
  linked_set
  qcheck-core
  qcheck-core.runner
  qcheck-stm.stm
  qcheck-stm.sequential
  qcheck-stm.domain)
 (action
  (run %{test} --verbose)))
