(library
 (package saturn_lockfree)
 (name linked_set)
 (modules linked_set))

(rule
 (action
  (copy ../../src_lockfree/size.ml size.ml))
 (package saturn_lockfree))

(test
 (package saturn_lockfree)
 (name dscheck_size)
 (modules dscheck_size size)
 (build_if
  (>= %{ocaml_version} 5))
 (libraries dscheck linked_set alcotest multicore-magic-dscheck)
 (flags
  (:standard -open Multicore_magic_dscheck)))

(test
 (package saturn_lockfree)
 (name stm_size)
 (modules stm_size)
 (libraries saturn_lockfree linked_set qcheck-core qcheck-stm.stm stm_run))
