(library
 (package saturn)
 (name linked_set)
 (modules linked_set))

(rule
 (action
  (copy ../../src/size.ml size.ml))
 (package saturn))

(test
 (package saturn)
 (name dscheck_size)
 (modules dscheck_size size)
 (build_if
  (>= %{ocaml_version} 5))
 (libraries dscheck linked_set alcotest multicore-magic-dscheck)
 (flags
  (:standard -open Multicore_magic_dscheck)))

(test
 (package saturn)
 (name stm_size)
 (modules stm_size)
 (libraries saturn linked_set qcheck-core qcheck-stm.stm stm_run))
