(rule
 (action
  (progn
   (copy ../../src/skiplist.ml skiplist.ml)
   (copy ../../src/size.ml size.ml)))
 (package saturn))

(test
 (package saturn)
 (name dscheck_skiplist)
 (modules skiplist size dscheck_skiplist)
 (build_if
  (>= %{ocaml_version} 5))
 (libraries alcotest dscheck multicore-magic-dscheck)
 (flags
  (:standard -open Multicore_magic_dscheck)))

(test
 (package saturn)
 (name qcheck_skiplist)
 (modules qcheck_skiplist)
 (libraries
  saturn
  barrier
  qcheck
  qcheck-core
  qcheck-alcotest
  alcotest
  domain_shims))

(test
 (package saturn)
 (name stm_skiplist)
 (modules stm_skiplist)
 (libraries saturn qcheck-core qcheck-stm.stm stm_run))
