(rule
 (action
  (copy ../../src_lockfree/spsc_queue.ml spsc_queue.ml))
 (package saturn_lockfree))

(test
 (package saturn_lockfree)
 (name spsc_queue_dscheck)
 (libraries atomic dscheck alcotest multicore-magic transparent_atomic)
 (build_if
  (>= %{ocaml_version} 5))
 (modules spsc_queue spsc_queue_dscheck))

(test
 (package saturn_lockfree)
 (name test_spsc_queue)
 (libraries spsc_queues domain_shims)
 (modules test_spsc_queue))

(test
 (package saturn_lockfree)
 (name qcheck_spsc_queue)
 (libraries
  spsc_queues
  barrier
  qcheck
  qcheck-core
  qcheck-alcotest
  domain_shims
  alcotest)
 (modules qcheck_spsc_queue))

(test
 (package saturn_lockfree)
 (name stm_spsc_queue)
 (modules stm_spsc_queue)
 (libraries
  spsc_queues
  qcheck-core
  qcheck-multicoretests-util
  qcheck-stm.stm
  stm_run)
 (enabled_if
  (= %{arch_sixtyfour} true)))
