(rule
 (action
  (copy ../../src_lockfree/spsc_queue/spsc_queue.ml spsc_queue.ml))
 (package saturn_lockfree))

(rule
 (action
  (copy
   ../../src_lockfree/spsc_queue/spsc_queue_unsafe.ml
   spsc_queue_unsafe.ml))
 (package saturn_lockfree))

(rule
 (action
  (copy ../../src_lockfree/spsc_queue/spsc_queue_intf.ml spsc_queue_intf.ml))
 (package saturn_lockfree))

(test
 (package saturn_lockfree)
 (name spsc_queue_dscheck)
 (libraries alcotest atomic dscheck multicore-magic-dscheck)
 (build_if
  (>= %{ocaml_version} 5))
 (modules spsc_queue spsc_queue_unsafe spsc_queue_intf spsc_queue_dscheck)
 (flags
  (:standard -open Multicore_magic_dscheck)))

(test
 (package saturn_lockfree)
 (name test_spsc_queue)
 (libraries spsc_queues domain_shims)
 (modules test_spsc_queue))

(test
 (package saturn_lockfree)
 (name qcheck_spsc_queue)
 (libraries
  spsc_queues
  barrier
  qcheck
  qcheck-core
  qcheck-alcotest
  domain_shims
  alcotest)
 (modules qcheck_spsc_queue))

(test
 (package saturn_lockfree)
 (name stm_spsc_queue)
 (modules stm_spsc_queue)
 (libraries
  spsc_queues
  qcheck-core
  qcheck-multicoretests-util
  qcheck-stm.stm
  stm_run))
