(rule
 (action
  (copy ../../src_lockfree/treiber_stack.ml treiber_stack.ml))
 (package saturn_lockfree))

(test
 (package saturn_lockfree)
 (name treiber_stack_dscheck)
 (libraries atomic dscheck alcotest backoff multicore-magic)
 (enabled_if
  (not
   (and
    (= %{arch_sixtyfour} false)
    (= %{architecture} arm))))
 (modules treiber_stack treiber_stack_dscheck))

(test
 (package saturn_lockfree)
 (name qcheck_treiber_stack)
 (libraries
  saturn_lockfree
  barrier
  qcheck
  qcheck-core
  qcheck-alcotest
  alcotest)
 (modules qcheck_treiber_stack))

(test
 (package saturn_lockfree)
 (name stm_treiber_stack)
 (modules stm_treiber_stack)
 (libraries
  saturn_lockfree
  qcheck-core
  qcheck-core.runner
  qcheck-stm.stm
  qcheck-stm.sequential
  qcheck-stm.domain)
 (enabled_if
  (= %{arch_sixtyfour} true))
 (action
  (run %{test} --verbose)))
